# LargeScaleMPC

./: README.md
s3-deploy/: prep.sh
s3-deploy/lowcmpc/deploy/: append_hosts.sh  deploy_file.sh  deploy_steps.txt  gen_committee_shares.py  gen_committees.py  gen_config.py  gen_seeds.py  get_ips.py  pull_logs.sh  run_player.sh  sort_az.py
s3-deploy/lowcmpc/deploy/008-party/: config.tf  config.tf~  terraform.tfstate  terraform.tfstate.backup
s3-deploy/lowcmpc/deploy/020-party/: config.tf  terraform.tfstate  terraform.tfstate.backup
s3-deploy/lowcmpc/deploy/032-party/: config.tf  config.tf~  terraform.tfstate  terraform.tfstate.backup  userdata.sh
s3-deploy/lowcmpc/deploy/064-party/: config.tf  config.tf~
s3-deploy/lowcmpc/deploy/128-party/: config.tf
s3-deploy/lowcmpc/deploy/256-party/: config.tf  terraform.tfstate  terraform.tfstate.backup
s3-deploy/lowcmpc/deploy/512-party/: config.tf  (+1 more)
src/f_aes/: f_aes.cpp  f_aes.h
src/f_online/: f_online.cpp  f_online.h
src/f_triples/: f_triples.cpp  f_triples.h
src/tests/f_online/: CMakeLists.txt  player.cpp
src/tests/f_triples/: CMakeLists.txt  player.cpp
src/tests/fft/: CMakeLists.txt  test_fft.cpp
src/tests/network/: CMakeLists.txt  mp_network_test.cpp
src/tests/share/: CMakeLists.txt  test_share.cpp
src/tests/triplet_gen_sh/: CMakeLists.txt  test_triplet_gen_sh.cpp
src/tools/: aes-cbc.cpp  aes-cbc.h  aes-ecb.cpp  aes-ecb.h  aes_seeds.cpp  aes_seeds.h  base64.cpp  base64.h  comm_patterns.cpp  comm_patterns.h  gen_shares.cpp  gen_shares.h  mp_network.cpp  mp_network.h  vandermonde.cpp  vandermonde.h
(+3249 files in other folders)
